# astra

./: README.md  pyproject.toml  requirements_Astra.txt  run_llava_onevision.sh  setup_astra.sh
astra_core/: __init__.py  configuration_astra.py  frame_selection.py  llava_arch.py  modeling_qwen2.py  modeling_qwen3_vl.py  siglip_encoder.py  token_selection.py  utils.py
lmms-eval/lmms_eval/: __main__.py  evaluator.py
lmms-eval/lmms_eval/api/: instance.py  task.py
lmms-eval/lmms_eval/loggers/: evaluation_tracker.py
lmms-eval/lmms_eval/models/: __init__.py
lmms-eval/lmms_eval/models/chat/: qwen3_vl.py
lmms-eval/lmms_eval/models/simple/: llava_onevision.py  llava_vid.py  qwen3_vl.py
lmms-eval/lmms_eval/tasks/egoschema/: utils.py
lmms-eval/lmms_eval/tasks/mlvu/: mlvu_test.yaml  utils.py
lmms-eval/lmms_eval/tui/: discovery.py
lmms-eval/test/eval/: run_cicd.py
